Conf-AmonNG

06/02/09 (emmanuel)
- diagnose/15-AmonServices : ajout des tests d'expiration des certificats 
26/02/09 (sam)
- agregation.conf : correction d'une erreur dans la conf (correction effectuée par GC de Nantes)

20/02/09 (sam)
-dansguardian-template.html : correction cosmétqiue. un ac-djon.fr trainait encore dans le fichier

05/02/09
- suppression de /usr/bin/era

16/01/09
- ajout d'un point pour les adresses de serveur de maj dans les domaine_no* squid

12/01/09
- bug 1016 ajout de "[src|dst]_no*_acad" pour squid

06/01/09 (sam)
- active-rvp : ajout d'une option pour renouveller le certificat.

09/12/08
- ajout du nom de l'établissement ("libelle_etab") dans 0_amon.xml

8/12/08 (sam)
- instance : correction bug (1011) dans la creation de l'utilisateur amon2 (erreur au niveau de la boucle)

4/12/08 (sam)
-squid.conf : suppression d'une directive qui etait en double

2/12/08 (sam)
- crontab : temps de relancement de magiv-rvp templatisé en paramètres avancés.
- utilisateur amon2 pas obligatoire + même proprietés et droits que l'utilisateur amon (accès à manage-amon)
sudoers : creation d'un groupe d'utilisateur comprenant amon et amon2

26/11/08 (sam)
- rvp : correction bug 953. test de l'existance du pid au moment du stop.

26/11/08
- dans le template hosts : verifie si nom_dmz n'est pas définit (spécifique amonecole/eolevz)

06/11/08
- ne verifie plus la presence du fichier qoseole.conf a l'arret. Permet d'arreter qoseole si on ne l'utilise plus
- parametres ldap pour nufw rendu obligatoire dans le dico si nufw actif.

30/10/08
- ajout de src_noauth et src_nocache

29/10/08 (sam)
- ajout conf pour chkrootkit

9/10/08 (sam)
- squid.conf : remodification des acl reserved (myport fonctionne pas)

06/10/2008
- domain_noauth : ajout de .archive.ubuntu.com
- squid.conf : ajout du port 4200 dans les port reservé + modif acl reserved (passage de port à myport)

2/10/2008 (sam)
- dico + squid.conf : gestion de l'authentification en fonction des interfaces
