@@ -451,19 +451,9 @@ contentscanexceptions = off
 #
 # If you do not use multiple filter groups, you need not specify this option.
 #
-%if %%is_defined('unactive_dansguardian_auth2')
-%if %%unactive_dansguardian_auth2 == "oui"
-authplugin = /etc/dansguardian/dansguardian1/common/ip.conf
-%elif %%unactive_dansguardian_auth2 == "non"
 authplugin = /etc/dansguardian/dansguardian1/authplugins/proxy-ntlm.conf
 authplugin = /etc/dansguardian/dansguardian1/authplugins/proxy-basic.conf
 authplugin = /etc/dansguardian/dansguardian1/common/ip.conf
-%else
-$p
-%end if
-%else
-$p
-%end if
 #authplugin = '/etc/dansguardian/dansguardian$z/authplugins/ident.conf'
 
 
