@@ -36,4 +36,6 @@ z_stats
 %if %%agregation == 'oui'
 agregation
 %end if
+%if %%activer_revprox == 'oui'
 nginx
+%end if
